adding swagger docu and relocating endpoints to the specific group file
